10.x

Changes:
- Convert to Python 3, PyQt6 and LinkChecker 10
- Update dialog and UI translation support disabled