@@ -1,6 +1,6 @@
 # Form implementation generated from reading ui file 'ui/main.ui'
 #
-# Created by: PyQt6 UI code generator 6.4.2
+# Created by: PyQt6 UI code generator 6.5.0
 #
 # WARNING: Any manual changes made to this file will be lost when pyuic6 is
 # run again.  Do not edit this file unless you know what you are doing.
@@ -736,8 +736,6 @@ class Ui_MainWindow(object):
         icon8.addPixmap(QtGui.QPixmap(":/icons/exit.png"), QtGui.QIcon.Mode.Normal, QtGui.QIcon.State.Off)
         self.actionQuit.setIcon(icon8)
         self.actionQuit.setObjectName("actionQuit")
-        self.actionCheckUpdates = QtGui.QAction(parent=MainWindow)
-        self.actionCheckUpdates.setObjectName("actionCheckUpdates")
         self.actionDonate = QtGui.QAction(parent=MainWindow)
         self.actionDonate.setObjectName("actionDonate")
         self.actionOpen_project = QtGui.QAction(parent=MainWindow)
@@ -752,7 +750,6 @@ class Ui_MainWindow(object):
         self.menuHelp.addAction(self.actionAbout)
         self.menuHelp.addAction(self.actionHelp)
         self.menuHelp.addAction(self.actionDebug)
-        self.menuHelp.addAction(self.actionCheckUpdates)
         self.menubar.addAction(self.menuFile.menuAction())
         self.menubar.addAction(self.menuEdit.menuAction())
         self.menubar.addAction(self.menuHelp.menuAction())
@@ -828,7 +825,6 @@ class Ui_MainWindow(object):
         self.actionSave.setText(_translate("MainWindow", "Save &results..."))
         self.actionQuit.setText(_translate("MainWindow", "&Quit"))
         self.actionQuit.setShortcut(_translate("MainWindow", "Ctrl+Q"))
-        self.actionCheckUpdates.setText(_translate("MainWindow", "Check for updates"))
         self.actionDonate.setText(_translate("MainWindow", "Donate"))
         self.actionOpen_project.setText(_translate("MainWindow", "&Open project..."))
         self.actionOpen_project.setIconText(_translate("MainWindow", "Open project"))
