@@ -1443,7 +1443,6 @@
     <addaction name="actionAbout"/>
     <addaction name="actionHelp"/>
     <addaction name="actionDebug"/>
-    <addaction name="actionCheckUpdates"/>
    </widget>
    <addaction name="menuFile"/>
    <addaction name="menuEdit"/>
@@ -1569,11 +1568,6 @@
    </property>
    <property name="shortcut">
     <string>Ctrl+Q</string>
-   </property>
-  </action>
-  <action name="actionCheckUpdates">
-   <property name="text">
-    <string>Check for updates</string>
    </property>
   </action>
   <action name="actionDonate">
